Removed anonymous self invoking function to ease debugging. Timer measurement.

--- a/shoot.html
+++ b/shoot.html
@@ -6,6 +6,7 @@
     <script src="jquery.min.js"></script>
     <script src="jquery.hotkeys.js"></script>
     <script src="class.js"></script>
+    <script src="utils.js"></script>
     <script src="vector.js"></script>
     <script src="shoot.js"></script>
   </head>
@@ -13,8 +14,17 @@
   
   <h1>Shoot</h1>
   
-  <div id="game">
+  <div id="game" style="float: left;">
     
+  </div>
+  
+  <div id="status" style="float: left; padding-left: 50px;">
+  
+  <h2>Status</h2>
+  <ul>
+    <li>Time per frame: <span id="frame-time"></span> ms
+  </ul>
+  
   </div>
     
   </body>
