Moved game objects to separate file

--- a/shoot.html
+++ b/shoot.html
@@ -8,6 +8,7 @@
     <script src="class.js"></script>
     <script src="utils.js"></script>
     <script src="vector.js"></script>
+    <script src="game-objects.js"></script>
     <script src="shoot.js"></script>
   </head>
   <body>
