--- a/shoot.html
+++ b/shoot.html
@@ -7,7 +7,7 @@
     <script src="jquery.hotkeys.js"></script>
     <script src="class.js"></script>
     <script src="utils.js"></script>
-    <script src="vector.js"></script>
+    <script src="2d-objects.js"></script>
     <script src="game-objects.js"></script>
     <script src="shoot.js"></script>
   </head>
