--- a/shoot.html
+++ b/shoot.html
@@ -23,7 +23,8 @@
   
   <h2>Status</h2>
   <ul>
-    <li>Time per frame: <span id="frame-time"></span> ms
+    <li>Time per frame: <span id="frame-time"></span> ms</li>
+    <li>FPS: <span id="fps"></span></li>
   </ul>
   
   </div>
